--- a/custom-login.html
+++ b/custom-login.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
-
+  <head>
+    <title>Sign in Portal Apis</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 <body style="background-color: red;">
+  <div id="api" data-name="Unified"></div>
+              <div id="html_element"></div>
 </body>
 </html>
