--- a/custom-login.html
+++ b/custom-login.html
@@ -5,9 +5,47 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
   </head>
-<body style="background-color: red;">
-  <div id="api" data-name="Unified"></div>
+<body>
+    <div class="container unified_container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="image-center">
+                
+              </div>
+              <h3 class="text-center">PRUEBA MENSAJE</h3>
+              <div id="api" data-name="Unified"></div>
               <div id="html_element"></div>
-</body>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      captchaUserResponseTokenEl = "extension_CaptchaUserResponseToken";
+
+      captchaCallback = function (response) {
+        document.getElementById(captchaUserResponseTokenEl).value = response;
+      };
+
+      onloadCallback = function () {
+        grecaptcha.render("html_element", {
+          "sitekey": "6Lfr4MweAAAAAOfNC-aRwQZ2C9lHfLr9YDU006Lj", // ENTER YOUR SITE KEY 
+          "callback": captchaCallback,
+        });
+
+        // Hides captcha custom attribute from view from the user
+        document.getElementById(captchaUserResponseTokenEl).style.display = "none";
+        document.getElementById(captchaUserResponseTokenEl+"_label").style.display = "none";
+      };
+    </script>
+    <script
+      src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+      async
+      defer
+    ></script>
+  </body>
 </html>
