--- a/custom-login.html
+++ b/custom-login.html
@@ -30,9 +30,10 @@
     </div>
     <script>
       function onClick(e) {
+        alert("Entra aquí");
         e.preventDefault();
         grecaptcha.ready(function() {
-          grecaptcha.execute('reCAPTCHA_site_key', {action: 'submit'}).then(function(token) {
+          grecaptcha.execute('6Lfr4MweAAAAAOfNC-aRwQZ2C9lHfLr9YDU006Lj', {action: 'submit'}).then(function(token) {
               alert("Token: " + token);
           });
         });
