--- a/custom-login.html
+++ b/custom-login.html
@@ -20,9 +20,8 @@
               <div class="image-center">
                 
               </div>
-              <h3 class="text-center">PRUEBA MENSAJE</h3>
-              <div id="api" data-name="Unified"></div>
-              <div id="html_element"></div>
+              <h3 class="text-center">Login Portal de Apis</h3>
+              <div id="api"></div>
             </div>
           </div>
         </div>
