--- a/custom-login.html
+++ b/custom-login.html
@@ -45,6 +45,14 @@
           });
         });
       }
+      function logSubmit(event) {
+        alert("Submit");
+        event.preventDefault();
+      }
+
+      const form = document.getElementById('form');
+      const log = document.getElementById('log');
+      form.addEventListener('submit', logSubmit);
   </script>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=6Lfr4MweAAAAAOfNC-aRwQZ2C9lHfLr9YDU006Lj"></script>
   </body>
