--- a/custom-login.html
+++ b/custom-login.html
@@ -50,8 +50,7 @@
         event.preventDefault();
       }
 
-      const form = document.getElementById('form');
-      const log = document.getElementById('log');
+      const form = document.getElementById('localAccountForm');
       form.addEventListener('submit', logSubmit);
   </script>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=6Lfr4MweAAAAAOfNC-aRwQZ2C9lHfLr9YDU006Lj"></script>
